TS storage shall not un-escape XML special chars

By default the QXmlSimpleReader transforms escaped XML chars into the actual chars (except < and &)
Now lokalize will re-escape them back and store them in a CData to prevent Qt from amending the string internally
On saving, the XML file is first exported to a string and the CData overhead is replaced.
This behavior can be disabled in Editor Settings

BUG: 419071